# planparser

./: .env.example  .gitattributes  Dockerfile  LICENSE  README.md  pyproject.toml
mvp/: api.py  app.py
mvp/utils/: images.py
notebooks/: 01_choose_model.ipynb  02_choose_dataset.ipynb  03_check_dataset.ipynb  04_finetune_yolo11l.ipynb  05_train-fasterrcnn-resnet50.ipynb
planparser/: api.py  app.py
src/data/: data.yaml
src/models/: fasterrcnn_resnet50.pt  yolo11l_custom.pt
