[project]
name = "planparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.2.0",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.243",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.1",
    "python-dotenv>=1.2.1",
]
